background-color and text-decoration are not preserved when merging paragraphs https://bugs.webkit.org/show_bug.cgi?id=116215

Reviewed by Ryosuke Niwa.

Source/WebCore:

In mergeInlineAndImplicitStyleOfElement(), style from matched rules are retrieved.
If they contain either background-color or text-decoration they will be removed
by removeNonEditingProperties() due to copyEditingProperties() implicit
'OnlyInheritableEditingProperties' parameter.
We have already had similar issue at https://bugs.webkit.org/show_bug.cgi?id=53196

Tests: editing/deleting/merge-div-from-span-with-style.html
       editing/deleting/merge-paragraph-from-span-with-multiple-text-decoration.html
       editing/deleting/merge-paragraph-from-span-with-style.html

* editing/EditingStyle.cpp:
(WebCore::copyEditingProperties):
(WebCore::editingStyleFromComputedStyle):
Add EditingStyle:: due to move EditingPropertiesToInclude to EditingStyle.h.

(WebCore::toEditingProperties):
Add a helper to easy convert PropertiesToInclude to EditingPropertiesToInclude,
needed in mergeInlineAndImplicitStyleOfElement().

(WebCore::EditingStyle::removeAllButEditingProperties):
Add a parameter to choose which editing properties should be preserved while
removing all properties (OnlyInheritableEditingProperties implicite).

(WebCore::EditingStyle::mergeInlineAndImplicitStyleOfElement):
Call removeAllButEditingProperties with parameter.

* editing/EditingStyle.h:
Move EditingPropertiesType to the header as it's needed by removeAllButEditingProperties().
Change EditingPropertiesType to EditingPropertiesToInclude to be consistent with
PropertiesToInclude.
Change removeNonEditingProperties() to removeAllButEditingProperties().

LayoutTests:

Added tests for verifying merge of paragraph/div from span with non-inline styles.

* editing/deleting/merge-div-from-span-with-style-expected.txt: Added.
* editing/deleting/merge-div-from-span-with-style.html: Added.
* editing/deleting/merge-paragraph-from-span-with-multiple-text-decoration-expected.txt: Added.
* editing/deleting/merge-paragraph-from-span-with-multiple-text-decoration.html: Added.
* editing/deleting/merge-paragraph-from-span-with-style-expected.txt: Added.
* editing/deleting/merge-paragraph-from-span-with-style.html: Added.


Canonical link: https://commits.webkit.org/135959@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151772 268f45cc-cd09-0410-ab3c-d52691b4dbfc